info.plist modified to get user location location image added MainViewController modified to get all annotations into map ShopDetailViewController modified to get all annotations into map MapKit extension created to get and add all shops annotation MapPin class created to have an instance of MKAnnotation Shop model modified to have a Float by default JSONParser modified to delete all space characters from API ViewController Map extension created to center Madrid into the map

--- a/GoToShopping/Info.plist
+++ b/GoToShopping/Info.plist
@@ -43,5 +43,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Esta aplicacion necesita su permiso para geolocalizar las tiendas a su alrededor</string>
 </dict>
 </plist>
